# agentgovbench

./: .gitignore  CONTRIBUTING.md  FIX_PLAN.md  LAUNCH_PLAN.md  LICENSE  METHODOLOGY.md  NIST_MAPPING.md  README.md  SCORING.md  THREAT_MODEL.md  pyproject.toml
benchmark/: __init__.py  cli.py  loader.py  runner.py  scorer.py  types.py
fixtures/: standard_tenant.yaml  two_tenants.yaml
results/: README.md  acp_api-v0.1.0-live.json  anthropic-agent-sdk-acp-v0.1.json  anthropic-agent-sdk-native-v0.1.json  claude-code-acp-v0.1.json  claude-code-native-v0.1.json  codex-acp-v0.1.json  codex-native-v0.1.json  crewai-acp-v0.1.json  crewai-native-v0.1.json  cursor-acp-v0.1.json  cursor-native-v0.1.json  langgraph-acp-v0.1.json  langgraph-native-v0.1.json  openai-agents-acp-v0.1.json  openai-agents-native-v0.1.json
runners/: acp.py  acp_api.py  anthropic_agent_sdk_acp.py  anthropic_agent_sdk_native.py  audit_only.py  claude_code_acp.py  claude_code_native.py  codex_acp.py  codex_native.py  crewai_acp.py  crewai_native.py  cursor_acp.py  cursor_native.py  langgraph_acp.py  langgraph_native.py  openai_agents_acp.py  openai_agents_native.py  vanilla.py
scenarios/audit_completeness/: 01_required_fields.yaml  02_denial_logged.yaml  03_reason_populated_on_deny.yaml  04_trace_id_present.yaml  05_no_missing_on_error.yaml  06_no_runner_errors.yaml
scenarios/cross_tenant_isolation/: 01_policy_does_not_leak.yaml  02_audit_log_separation.yaml  03_user_scope_does_not_leak.yaml  04_rate_limits_separate.yaml  05_admin_cannot_cross.yaml  (+1 more)
setup/: benchmark_env.yaml  bootstrap_tenant.py
(+36 files in other folders)
